k8s/legendaries/monitoring/alertmanager.yml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-main
  namespace: monitoring
  labels: &labels
    app: alertmanager
    alertmanager: main
spec:
  clusterIP: None
  ports:
    - name: web
      port: 9093
      targetPort: web
  selector:
    <<: *labels
