k8s/legendaries/monitoring/prometheus.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: main
  name: prometheus-main
  namespace: monitoring
spec:
  clusterIP: None
  ports:
    - name: web
      port: 9090
      targetPort: web
  selector:
    app: prometheus
    prometheus: main
