k8s/legendaries/monitoring/kube-prometheus-stack.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kps-prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-oauth2-proxy-forward-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - &hostname prometheus.monitoring.hannahs.family
      secretName: *hostname
  rules:
    - host: *hostname
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kps-prometheus
                port:
                  name: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kps-alertmanager
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-oauth2-proxy-forward-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - &hostname alerts.monitoring.hannahs.family
      secretName: *hostname
  rules:
    - host: *hostname
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kps-alertmanager
                port:
                  name: web
