k8s/legendaries/monitoring/thanos.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kps-thanos-ruler
  namespace: monitoring
spec:
  selector:
    app: thanos-ruler
    thanos-ruler: kps-thanos-ruler
  ports:
    - port: 10901
      name: grpc
      targetPort: grpc
    - port: 10902
      name: web
      targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kps-thanos-ruler
  namespace: monitoring
  annotations:
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-oauth2-proxy-forward-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - &hostname ruler.monitoring.hannahs.family
      secretName: *hostname
  rules:
    - host: *hostname
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kps-thanos-ruler
                port:
                  name: web
